--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,10 @@
-<footer>
-        <p>CREATED BY DAVIDE Copyright {{getCurrentYear}}</p>
-</footer>
+  <footer class="page-footer">
+        <div class="container">
+            <div class="links"><a href="#">About me</a><a href="#">Contact me</a><a href="#">Projects</a></div>
+            <div class="social-icons"><a href="#">
+                    <i class="icon ion-social-facebook"></i>
+                    </a><a href="#">
+                            <i class="icon ion-social-instagram-outline"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a></div>
+        </div>
+         <p>CREATED BY DAVID Copyright {{getCurrentYear}}</p>
+    </footer>
